# vertminer-nvidia

./: .gitignore  .snarf.cpp.swp  .swp  .vertminer.vcxproj.un~  Makefile.am  README.md  README.txt  algos.h  api.cpp  bench.cpp  bignum.cpp  build.cmd  build.sh  compat.h  configure.ac  configure.sh  crc32.c  cuda.cpp  cuda_helper.h  elist.h  flow.txt  hashlog.cpp  miner.h  nvapi.cpp  nvml.cpp  p2pool_stats.cpp  p2pool_stats.h  pools.conf  pools.cpp  snarf.cpp  snarf.h  stats.cpp  util.cpp  vertminer-config.h  vertminer.conf  vertminer.cpp  vertminer.s1n  vertminer.sln  vertminer.vcxproj  vertminer.vcxproj.filters  (+1 more)
Algo256/: cuda_blake256.cu  cuda_bmw256.cu  cuda_cubehash256.cu  cuda_groestl256.cu
api/: index.php  local-sample.php  summary.pl  websocket.htm
compat/: Makefile  Makefile.in  vertminer-config.h
compat/curl-for-windows/curl/include/curl/: curlbuild.h
compat/jansson/: Makefile  Makefile.in
lyra2/: cuda_lyra2.cu  cuda_lyra2_sm2.cuh  cuda_lyra2_sm5.cuh  cuda_lyra2v2.cu  lyra2REv2.cu
res/: vertminer.rc
sph/: blake.c  includes.txt
